--- a/public/index.html
+++ b/public/index.html
@@ -58,7 +58,7 @@
 
 <!-- ANGULAR CUSTOM -->
 <script src="js/controllers/MainCtrl.js"></script>
-<script src="js/controllers/OurMenuCtrl.js"></script>
+<script src="js/controllers/OurMainCtrl.js"></script>
 <script src="js/controllers/ReservationCtrl.js"></script>
 <script src="js/controllers/ContactCtrl.js"></script>
 <script src="js/controllers/UserCtrl.js"></script>
@@ -68,7 +68,7 @@
 
 </head>
 
-<body ng-app="casaApp" ng-controller="MainController as MainCtrl">
+<body ng-app="casaApp" ng-controller="UserController">
     <!-- Preloader
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <div id="preloader">
