--- a/public/index.html
+++ b/public/index.html
@@ -117,7 +117,7 @@
                 <!-- angular templating -->
                 <!-- this is where content will be injected -->
 
-            <div ng-view></div>
+            <div ui-view></div>
 
         </div>
 
